add germination date

--- a/src/index.njk
+++ b/src/index.njk
@@ -26,5 +26,6 @@ title: Notes
 
   <footer class="footer">
     <p>Un jardin cultivé en permacomputing, d'idées, notes et expériences.</p>
+    <p class="build-info">Dernière germination : {{ site.buildTime | formatDate }}</p>
   </footer>
 </main>
