--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="view-transition" lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,5 +13,6 @@
 </head>
 <body>
     {{ content | safe }}
+    <script type="module" src="/js/transitions.js"></script>
 </body>
 </html>
