couche de vernis

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - Digital Garden</title>
+    <title>{{ title }} - Jardin numérique</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/favicon.svg" type="image/svg+xml">
     <style>
         body {
             font-family: system-ui, -apple-system, sans-serif;
@@ -39,7 +41,7 @@
             color: #666;
             font-size: 0.9rem;
         }
-    </style>
+    </link>
 </head>
 <body>
     <nav>
@@ -50,6 +52,6 @@
     <main>
         {{ content | safe }}
     </main>
-    
+
 </body>
 </html>
