--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Digital Garden - A space for thoughts, notes, and ideas">
-    <meta name="theme-color" content="#000000">
-    <title>{{ title }} | My Digital Garden</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Un jardin numérique cultivé par Théo.">
+    <meta name="theme-color" content="#5C4B75">
+    <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/img/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     {{ content | safe }}
