--- a/src/index.njk
+++ b/src/index.njk
@@ -32,7 +32,7 @@ title: Jardin de Théo
 
   <footer class="footer">
     <p>Un jardin cultivé en permacomputing.</p>
-    <p>On peut me retrouver : <a href="https://bsky.app/profile/theogs.bsky.social">bsky</a>, <a href="https://www.are.na/theo-paolo/channels">are.na</a> et  <a href="https://twigg.social/@theo"> <img src="/img/twigg.svg" alt="twigg" class="twigg-icon" width="14" height="14">twigg</a></p>
-    <p class="build-info">Dernière germination : {{ site.buildTime | formatDate }}</p>
+    <p>Me suivre sur : <br> <a href="https://bsky.app/profile/theogs.bsky.social">bsky</a>, <a href="https://www.are.na/theo-paolo/channels">are.na</a> et  <a href="https://twigg.social/@theo"> <img src="/img/twigg.svg" alt="twigg" class="twigg-icon" width="14" height="14">twigg</a></p>
+    <p class="build-info">Dernière germination : <br> {{ site.buildTime | formatDate }}</p>
   </footer>
 </main>
